--- a/ns_3d_geometry.ipynb
+++ b/ns_3d_geometry.ipynb
@@ -2,71 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "ec1bd854-ca47-4b63-a811-c1b95dfc1ae0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "usage: ipykernel_launcher.py [--help] [--hydra-help] [--version]\n",
-      "                             [--cfg {job,hydra,all}] [--resolve]\n",
-      "                             [--package PACKAGE] [--run] [--multirun]\n",
-      "                             [--shell-completion] [--config-path CONFIG_PATH]\n",
-      "                             [--config-name CONFIG_NAME]\n",
-      "                             [--config-dir CONFIG_DIR]\n",
-      "                             [--experimental-rerun EXPERIMENTAL_RERUN]\n",
-      "                             [--info [{all,config,defaults,defaults-tree,plugins,searchpath}]]\n",
-      "                             [overrides ...]\n",
-      "ipykernel_launcher.py: error: unrecognized arguments: -f\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "2",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/.virtualenvs/NVIDIA_Virtual/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "121181ad-e7db-4e43-9f5f-7bb8e1c06575",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "16f59a57-8057-4325-a6e1-1119b761fb2b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "cc92bc8f-cfcb-4915-823a-6e08faff3fd2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "import os\n",
+    "import warnings\n",
+    "from sympy import Symbol, Eq, Abs\n",
+    "import modulus.sym\n",
+    "from modulus.sym.geometry.primitives_2d import Rectangle, Line\n",
+    "from modulus.sym.geometry.primitives_3d import Box, Sphere, Cylinder\n",
+    "from modulus.sym.eq.pdes.navier_stokes import NavierStokes\n",
+    "import numpy as np\n",
+    "import vtk\n",
+    "from modulus.sym.utils.io.vtk import var_to_polyvtk"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bba2cdf2-e7a0-40ed-9a6d-0f3b2446a75b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nr_points = 1000000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "95880fd4-d576-4246-943f-29558229a12d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "room = Box((0, 0, 0), (10, 10, 5))\n",
+    "inlet = Box((0, 9, 2), (1, 10, 3))\n",
+    "outlet = Box((9, 9, 2), (10, 10, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "02ae7fc7-4236-439b-898c-1c03977cd061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "room_interior = room - inlet - outlet\n",
+    "room_interior_sample = room_interior.sample_boundary(nr_points=nr_points)\n",
+    "var_to_polyvtk(room_interior_sample, \"room_interior_sample\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c6338272-b324-42a2-afb9-d475aeee5de4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(\"Volume:{:.3f}\".format(np.sum(room_interior_sample[\"area\"])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf046429-fba8-4293-982b-8d0624fb6287",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
